--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!-- <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script> -->
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
-
+    <link href="https://fonts.googleapis.com/css?family=Almendra" rel="stylesheet">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
